@@ -36,7 +36,7 @@
  * (c) 2002-2013 by Mathias Lux (mathias@juggle.at)
  *  http://www.semanticmetadata.net/lire, http://www.lire-project.net
  *
- * Updated: 20.04.13 10:26
+ * Updated: 21.04.13 09:05
  */
 
 package net.semanticmetadata.lire.benchmarking;
@@ -96,10 +96,11 @@ public class TestWang extends TestCase {
 
         }
         // Setting up DocumentBuilder:
+//        parallelIndexer = new ParallelIndexer(8, indexPath, testExtensive);
         parallelIndexer = new ParallelIndexer(5, indexPath, testExtensive){
             @Override
             public void addBuilders(ChainedDocumentBuilder builder) {
-//                builder.addBuilder(DocumentBuilderFactory.getCEDDDocumentBuilder());
+                builder.addBuilder(DocumentBuilderFactory.getCEDDDocumentBuilder());
                 builder.addBuilder(DocumentBuilderFactory.getPHOGDocumentBuilder());
 //        builder.addBuilder(DocumentBuilderFactory.getLuminanceLayoutDocumentBuilder());
 //        builder.addBuilder(DocumentBuilderFactory.getJCDDocumentBuilder());
@@ -218,7 +219,7 @@ public class TestWang extends TestCase {
 //        computeMAP(ImageSearcherFactory.createColorLayoutImageSearcher(1000), "Color Layout");
 //        computeMAP(ImageSearcherFactory.createScalableColorImageSearcher(1000), "Scalable Color");
 //        computeMAP(ImageSearcherFactory.createEdgeHistogramImageSearcher(1000), "Edge Histogram");
-//        computeMAP(ImageSearcherFactory.createCEDDImageSearcher(1000), "CEDD");
+        computeMAP(ImageSearcherFactory.createCEDDImageSearcher(1000), "CEDD");
         computeMAP(ImageSearcherFactory.createPHOGImageSearcher(1000), "PHOG");
 //        computeMAP(ImageSearcherFactory.createLuminanceLayoutImageSearcher(1000), "LumLay");
 //        computeMAP(ImageSearcherFactory.createOpponentHistogramSearcher(1000), "OpponentHistogram - JSD");
